# textual-dominfo

./: .pre-commit-config.yaml  Makefile  Pipfile  README.md  pyproject.toml  setup.cfg
src/textual_dominfo/: __init__.py  __main__.py
textual_dominfo/: __init__.py  __main__.py  dom_info.py
