[metadata]
name = textual-dominfo
description = A simple tool for inspecting Textual widget styles
version = attr: textual_dominfo.__version__
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/davep/textual-dominfo
author = Dave Pearson
author_email = davep@davep.org
maintainer = Dave Pearson
maintainer_email = davep@davep.org
license = License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
license_files = LICENCE
keywords = terminal, library, widget
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Environment :: Console
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Terminals
    Topic :: Software Development :: Libraries
    Typing :: Typed
project_urls =
    Documentation = https://github.com/davep/textual-dominfo/blob/main/README.md
    Source = https://github.com/davep/textual-dominfo
    Issues = https://github.com/davep/textual-dominfo/issues
    Discussions = https://github.com/davep/textual-dominfo/discussions

[options]
packages = find:
platforms = any
include_package_data = True
install_requires = textual>=0.47.0
python_requires = >=3.8

[options.package_data]
textual_dominfo = py.typed

### setup.cfg ends here
